--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm run build && nodemon server.js",
-    "build": "cd frontend/ && npm run build",
+    "build": "cd frontend/ && npm i && npm run build",
     "server": "nodemon server.js"
   },
   "keywords": [],
