--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build && nodemon server.js",
+    "start": "npm run build && node server.js",
     "build": "cd frontend/ && npm i && npm run build",
     "server": "nodemon server.js"
   },
